Updated Variant & Unit Type